force-app/main/default/objects/Opportunity/fields/USD_Rate_Date_latest__c.field-meta.xml
<CustomField>
    <fullName>USD_Rate_Date_latest__c</fullName>
    <label>USD Rate Date</label>
    <type>Date</type>
</CustomField>