force-app/main/default/objects/Opportunity/fields/USD_Rate_Latest__c.field-meta.xml
<CustomField>
    <fullName>USD_Rate_Latest__c</fullName>
    <label>USD Rate Latest</label>
    <length>25</length>
    <type>Text</type>
</CustomField>