force-app/main/default/objects/Opportunity/fields/USD_Rate_Upon_Creation__c.field-meta.xml
<CustomField>
    <fullName>USD_Rate_Upon_Creation__c</fullName>
    <label>USD Rate Upon Creation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>